2006-02-10  Zoltan Varga  <vargaz@gmail.com>

	* Array.cs: Fix some methods which previously returned Nullable<T>.

	* Nullable.cs: Add T: struct constraint and fix constructor.

Fri Feb 3 11:01:46 CET 2006 Paolo Molaro <lupus@ximian.com>

	* String.cs: changed StartsWith/EndsWith to faster versions.

2006-02-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* String.cs: implement 2.0 StartsWith and EndsWith new overloads. Based
	on a patch by Thong Nguyen.

2006-01-31  Zoltan Varga  <vargaz@gmail.com>

	* String.cs: Implement one of the new net 2.0 Split methods.

2006-01-31  Atsushi Enomoto  <atsushi@ximian.com>

	* String.cs : (LastIndexOf) Fixed bug #77412. It should not expect
	  that value length is bigger than its index.

2006-01-27  Zoltan Varga  <vargaz@gmail.com>

	* DateTime.cs: Add some 2.0 methods and properties.

2006-01-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Console.cs: if InternalCodePage returns -1, use the default encoding.
	Also match the UTF8 one properly. Patch by wall_john@sohu.com.

2006-01-19  Atsushi Enomoto  <atsushi@ximian.com>

	* ModuleHandle.cs : GetPEKind() is not public in 2.0 RTM.

2006-01-16  Alp Toker  <alp@atoker.com>

	* TimeSpan.cs: Simple implementation of NET 2.0 TryParse() using
	try/catch

2006-01-05  Raja R Harinath  <rharinath@novell.com>

	Fix regressions introduced by the fix to #71300.
	* Activator.cs (CreateInstance): Use Binder.SelectMethod instead
	of home-grown FindBestCtor.
	(FindBestCtor): Delete.

2006-01-03  Zoltan Varga  <vargaz@gmail.com>

	* Nullable.cs: Update to Net 2.0 RTM.
	
	* Nullable.cs: Add comments about runtime dependencies on the layout of
	this type.

2006-01-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Activator.cs: Now find the best ctor when null are used for 
	paramaters. Fix bug #71300. Added checks for specific types (void,
	TypedReference, ArgIterator and RuntimeArgumentHandle).
	* Console.cs: Re-use Environment logic to detect Windows.